aufgeraeumt/Makefiles von ueberfluessigem befreit

--- a/check_hcan/Makefile
+++ b/check_hcan/Makefile
@@ -1,28 +1,19 @@
 .PHONY: libhcan++
 
-include ../ARCH.inc
-
-ifneq ($(ARCH),$(last_ARCH))
-	CONDITIONAL_CLEAN=clean
-endif
-
 TARGET = check_hcan
 OBJ = main.o
 
-LD_FLAGS = -Wl,--export-dynamic -L ../libhcan++/binary_$(ARCH) \
+LD_FLAGS = -Wl,--export-dynamic -L ../libhcan++ \
 		   -lhcan++ -lboost_program_options -lboost_regex \
 		   `pkg-config libxml++-2.6 --libs` -fPIC
 
-ifeq ($(ARCH),i386)	
-	CXX = g++
-else	
-	CXX = arm-linux-gnu-g++	
-endif
+CXX = g++
 
 INC = -I. -I.. -I../libhcan++ -I../include
-CXXFLAGS = -Wall -Werror -O2 $(INC)
+CXXFLAGS = -Wall -O2 $(INC)
+# wegen deprecated auto_ptr:  CXXFLAGS += -Werror
 
-all: libhcan++ $(CONDITIONAL_CLEAN) $(TARGET)
+all: libhcan++ $(TARGET)
 
 libhcan++:
 	ln -sf libhcan++.so.2.0 libhcan++.so
@@ -30,19 +21,17 @@ libhcan++:
 
 $(TARGET): $(OBJ) libhcan++
 	$(CXX) -o $@ $(OBJ) $(LD_FLAGS) 
-	test -d ./binary_$(ARCH) || mkdir binary_$(ARCH)
-	mv $@ binary_$(ARCH)
 
 clean:
 	rm -f *.o
 	cd ../libhcan++ && make clean
-	sudo rm -f ./binary_$(ARCH)/$(TARGET)
 
 ctags:
 	ctags *.cc *.h ../libhcan++/*.cc ../libhcan++/*.h
 
 install:
-	cd binary_$(ARCH); install $(TARGET) /usr/bin
+	#strip ./$(TARGET)
+	install $(TARGET) /usr/bin
 
 dep:
 	(for i in *.cc; do echo; $(CXX) -M -MG $(INC) $$i; done) > .depend
