--- a/hcan4mqttpc/Makefile
+++ b/hcan4mqttpc/Makefile
@@ -1,22 +1,21 @@
 TARGET = hcan4mqttpc
 OBJ  = main.o mqttClient.o mqttHcan.o
-OBJ += 	./MQTTPacket/src/MQTTConnectClient.o ./MQTTPacket/src/MQTTSerializePublish.o \
-		./MQTTPacket/src/MQTTPacket.o ./MQTTPacket/src/MQTTSubscribeClient.o \
-		./MQTTPacket/src/MQTTDeserializePublish.o
-		 
+OBJ += ./MQTTPacket/src/MQTTConnectClient.o 
+OBJ += ./MQTTPacket/src/MQTTSerializePublish.o
+OBJ += ./MQTTPacket/src/MQTTPacket.o
+OBJ += ./MQTTPacket/src/MQTTSubscribeClient.o
+OBJ += ./MQTTPacket/src/MQTTDeserializePublish.o
 
-CXX = gcc
-LDFLAGS = 
+CXX = clang
 
 CFLAGS  = -I. -Wall -g -Os
 CFLAGS += -DDEBUG
 CFLAGS += -I ./MQTTPacket/src
 
-all: $(CONDITIONAL_CLEAN) $(TARGET)
+all: $(TARGET)
 
 $(TARGET): $(OBJ)
-	$(CXX) $(LDFLAGS) -o $@ $(OBJ)
-	strip $@
+	$(CXX) -o $@ $(OBJ)
 
 $(OBJ): %.o:%.c
 	$(CXX) $(CFLAGS) -o $@ -c $<
@@ -29,7 +28,12 @@ ctags:
 	ctags *.c *.h
 
 install:
+	strip ./$(TARGET)
 	sudo install $(TARGET) /usr/sbin
+
+analyse: # clang Static Analyzer -> Report
+	# scan-build ./configure” (für autoconf-Projekte)
+	scan-build make
 	
 run: 
 	./$(TARGET) -D
