--- a/hcand/Makefile
+++ b/hcand/Makefile
@@ -1,41 +1,23 @@
-include ../ARCH.inc
-include ARCH_letzter_Compilerlauf.inc
-
-ifneq ($(ARCH),$(last_ARCH))
-	CONDITIONAL_CLEAN=clean
-endif
-
 TARGET = hcand
 OBJ = main.o socket.o
 CFLAGS = -O2 -I. -Wall -g #-DDEBUG0
 
-ifeq ($(ARCH),i386)
-	CXX = gcc
-else
-	CXX = arm-linux-gnu-gcc
-	#CFLAGS = -O2 -I/usr/arm-linux-gnu/include -Wall -g #-mlittle-endian	
-endif
+CXX = clang
 
-
-all: $(CONDITIONAL_CLEAN) $(TARGET)
+all: $(TARGET)
 
 $(TARGET): $(OBJ)
 	$(CXX) $(LDFLAGS) -o $@ $(OBJ)
-	test -d ./binary_$(ARCH) || mkdir binary_$(ARCH)
-	mv $@ binary_$(ARCH)
-	strip binary_$(ARCH)/$@
 
 $(OBJ): %.o:%.c
 	$(CXX) $(CFLAGS) -o $@ -c $<
 	
 clean:
 	rm -f *.o $(TARGET)
-	@echo last_ARCH=$(ARCH) > ARCH_letzter_Compilerlauf.inc
-	sudo rm -f ./binary_$(ARCH)/$(TARGET)
 
 ctags:
 	ctags *.c *.h
 
 install:
-	sudo install binary_$(ARCH)/$(TARGET) /usr/sbin
-
+	strip ./$(TARGET)
+	sudo install ./$(TARGET) /usr/sbin
