--- a/telican/Makefile
+++ b/telican/Makefile
@@ -26,7 +26,7 @@ else
 	# als 64-Bit-Prozess fuehrt -O2 zum Segmentation fault:   CXXFLAGS = -Wall -O2 $(INC) -fPIC
 endif
 CXXFLAGS += $(INC) -fPIC
-# wegen deprecated auto_ptr:  CXXFLAGS += -Werror
+CXXFLAGS += -Werror
 
 
 all: libhcan++ $(TARGET)
