--- a/hcan4mqttpc/Makefile
+++ b/hcan4mqttpc/Makefile
@@ -18,7 +18,7 @@ all:
 	
 clean:
 	rm -f $(TARGET)
-	test -d ./scanBuild || sudo rm -R ./scanBuild
+	rm -fR ./scanBuild
 
 install:
 	strip $(TARGET)
