--- a/firmwares/controllerboard-1612-v01/Makefile
+++ b/firmwares/controllerboard-1612-v01/Makefile
@@ -1,13 +1,11 @@
 # Makfile fuer C1612
 # 
-#
+.PHONY:	release
 include ../../ARCH.inc
 
-OBJ_LOCAL := $(patsubst %.c,%.o,$(wildcard *.c))
-
-OBJ_DEVICES := $(patsubst %.c,%.o,$(wildcard ./devices/*.c))
-
-.PHONY:	release
+SRC = $(patsubst %.c, %.c , $(wildcard *.c))
+SRC += $(patsubst %.c, %.c , $(wildcard ./devices/*.c))
+SRC += $(patsubst %.c, %.c , $(wildcard ../../canix/*.c))
 
 #Der atmega644 hat die doppelte EEPROM- und SRAM-Groesse gegenueber dem atmega32.
 #export MCU = atmega32
@@ -15,59 +13,42 @@ OBJ_DEVICES := $(patsubst %.c,%.o,$(wildcard ./devices/*.c))
 TARGET = main
 adr = 1022
 
-export CC = avr-gcc
-export OBJCOPY = avr-objcopy
-OBJ     = ../../canix/canix.o ../../canix/mcp2515.o \
-		  ../../canix/tools.o ../../canix/hcan_hms.o \
-		  ../../canix/hcan_rts.o ../../canix/syslog.o \
-		  ../../canix/eds.o \
-		  ../../canix/mem_check.o \
-		  $(OBJ_LOCAL) $(OBJ_DEVICES)
+OBJCOPY = avr-objcopy
+CXX = avr-gcc
 
-export F_CPU  = 3686400
-#export F_CPU  = 16000000
-export F_CAN   = 8000000
-export CAN_SPEED = 125000
+F_CPU  = 3686400
+F_CAN   = 8000000
+CAN_SPEED = 125000
 
-export DEFINES = -DMCU_$(MCU) \
-        -DF_CPU=$(F_CPU) -DF_CAN=$(F_CAN) -DCAN_SPEED=$(CAN_SPEED) \
-        -DCANIX_SYSLOG -DCANIX_HMS -DCANIX_RTS \
-        -DCANIX_EDS $(FEATURES)
+DEFINES = -DMCU_$(MCU) -DF_CPU=$(F_CPU) -DF_CAN=$(F_CAN) -DCAN_SPEED=$(CAN_SPEED) \
+          -DCANIX_SYSLOG -DCANIX_HMS -DCANIX_RTS -DCANIX_EDS $(FEATURES)
 
-export GCCFLAGS = -mmcu=$(MCU) -Wall -Werror -Wstrict-prototypes -Os \
-        -mcall-prologues
-
-INC = -I. -I../../canix -I../.. -I../../include
-CFLAGS= $(GCCFLAGS) $(INC) $(DEFINES)
+CFLAGS =  -mmcu=$(MCU) -Wall -Werror -Wstrict-prototypes -Os -mcall-prologues
+CFLAGS += -I. -I../../canix -I../.. -I../../include
+CFLAGS += $(DEFINES)
 
 all:
 	cd devices; make all
 	make allX
-
+	
 allX: $(TARGET).hex
 	sudo test -d ./C1612_$(MCU) || mkdir C1612_$(MCU)
-	sudo mv $(TARGET).hex ./C1612_$(MCU)/
+	sudo mv $(TARGET).hex ./C1612_$(MCU)
 	ls ./C1612_$(MCU)/*.*
 
-$(TARGET).hex : $(TARGET).out
+$(TARGET).hex: $(TARGET).out
 	$(OBJCOPY) -R .eeprom -O ihex $(TARGET).out $(TARGET).hex 
 	avr-size $(TARGET).hex
 
-$(TARGET).out : $(OBJ)
-	$(CC) $(CFLAGS) -o $(TARGET).out -Wl,-Map,$(TARGET).map $(OBJ) $(LDFLAGS)
-
-i_clean_canix:
-	cd ../../canix; rm -f *.o *.d *.lst 
+$(TARGET).out:
+	$(CXX) $(CFLAGS) -o $(TARGET).out $(SRC) -Wl,-Map,$(TARGET).map
 
 clean:
-	make i_clean_canix
-	rm -f *.o *.map *.out
-	sudo rm -f ./C1612_$(MCU)/*.hex
+	cd ../../canix; rm -f *.o *.d *.lst
+	rm -f *.map *.out
+	sudo rm -fR ./C1612_$(MCU)
 	rm -f devices.c devices.h timer.c
-	cd devices; rm -f *.o devices.xml
-
-ctags:
-	ctags *.c *.h ../../canix/*.c ../../canix/*.h ../../include/*.h
+	cd devices; rm -f devices.xml
 
 load:
 	make all
@@ -76,7 +57,6 @@ load:
 	@echo -------------------------
 	telican -a $(IP_HI) -C -c $(adr) --arch $(MCU) -e "flash C1612_$(MCU)/$(TARGET).hex"
 	#telican --polite-time 2 -a $(IP_HI) -c $(adr) --arch $(MCU) -e "flash C1612_$(MCU)/$(TARGET).hex"
-	#telican -c $(adr) --arch $(MCU) -e "flash C1612_$(MCU)/$(TARGET).hex"
 
 release:
 	../../tools/mkrelease
