Alternatives all-Ziel fuer staticAnalyse hinzugefuegt

--- a/libhcan++/Makefile
+++ b/libhcan++/Makefile
@@ -2,15 +2,16 @@
 #
 TARGET = libhcan++
 
+SRC = $(patsubst %.cc, %.cc , $(wildcard *.cc))
 OBJ = $(patsubst %.cc,%.o,$(wildcard *.cc))
 
 CXX = g++ #-m32
-CXXFLAGS = -Wall
-CXXFLAGS += -O0   # als 64-Bit-Prozess fuehrt -O2 zum Segmentation fault
-# Debug aktivieren:	CXXFLAGS += -g
+#CXXFLAGS = -Wall
+#CXXFLAGS += -O0   # als 64-Bit-Prozess fuehrt -O2 zum Segmentation fault
+## Debug aktivieren:	CXXFLAGS += -g
 CXXFLAGS += -I.. -I. -I../include `pkg-config libxml++-2.6 --cflags`
-CXXFLAGS += -Werror
-CXXFLAGS += -fPIC
+#CXXFLAGS += -Werror
+#CXXFLAGS += -fPIC
 
 all: $(TARGET).so
 
@@ -19,6 +20,9 @@ $(TARGET).so: $(OBJ)
 
 $(OBJ): %.o:%.cc
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
+
+allSrc: 
+	$(CXX) $(CXXFLAGS) -o $(SRC) -shared -o $(TARGET).so -fPIC -Wl,-soname,$(TARGET).so -Wl,-Map=$(TARGET).map
 
 install:
 	/usr/bin/install ./$(TARGET).so /usr/lib
