--- a/hcanswd/Makefile
+++ b/hcanswd/Makefile
@@ -1,19 +1,21 @@
+# hcanswd
+#
 PHONY: libhcan++ libhcandata
 
 TARGET = hcanswd
 OBJ = main.o
+SRC = main.cc
 
 LD_FLAGS = -Wl,--export-dynamic \
-			-L ../libhcandata -lhcandata \
-			-L ../libhcan++ -lhcan++ \
-			-lboost_program_options \
-			-lboost_regex \
+			-L ../libhcandata -lhcandata -L ../libhcan++ -lhcan++ \
+			-lboost_program_options -lboost_regex \
 			`pkg-config libxml++-2.6 --libs`
 
 CXX = g++
 
-INC = -I. -I.. -I../libhcan++ -I../libhcandata -I../include
-CXXFLAGS = -Wall -Werror -O2 $(INC) -g
+CXXFLAGS  = -Wall -Werror -O2 
+CXXFLAGS += -I. -I.. -I../libhcan++ -I../libhcandata -I../include
+CXXFLAGS += -g
 
 all: libhcan++ libhcandata $(TARGET)
 
@@ -27,18 +29,13 @@ libhcandata:
 $(TARGET): $(OBJ) libhcan++ libhcandata
 	$(CXX) -o $@ $(OBJ) $(LD_FLAGS) 
 
+allSrc:
+	$(CXX) $(CXXFLAGS) -o $(SRC) -o $(TARGET) $(LD_FLAGS)
+
 clean:
 	rm -f *.o $(TARGET)
-
-ctags:
-	ctags *.cc *.h ../libhcan++/*.cc ../libhcan++/*.h ../libhcandata/*.cc ../libhcandata/*.h
 
 install:
 	# strip ./$(TARGET)
 	sudo install ./$(TARGET) /usr/sbin
-
-dep:
-	(for i in *.cc; do echo; $(CXX) -M -MG $(INC) $$i; done) > .depend
-
-include .depend
 
